# kotte

./: .cspell.json  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  NOTICE  PROJECT_IMPROVEMENT_ANALYSIS.md  README.md  fixes.md  pytest.ini  review-actions-15.md  sonar-fixes.md
.devcontainer/: Dockerfile  devcontainer.json  init-db.sql
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 2c3c565210b1_enable_age_extension.py  78c03fa27fda_create_kotte_users_stub.py  a1b2c3d4e5f6_create_kotte_audit_events.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  connections.py  csv_importer.py  graph.py  graph_delete_node.py  health.py  import.py  import_csv.py  import_router.py  query.py  query_stream.py  session.py  users.py
backend/app/core/: auth.py  config.py  connection_storage.py  credentials.py  database.py  deps.py  errors.py  logging.py  metrics.py  middleware.py  telemetry.py  validation.py
backend/app/core/database/: __init__.py  connection.py  cypher.py  manager.py  pool_registry.py  utils.py
backend/app/models/: auth.py  connection.py  graph.py  import_models.py  query.py  session.py
backend/app/services/: agtype.py  audit.py  cache.py  metadata.py  query_templates.py  query_tracker.py  user.py
backend/data/: connections.json
backend/scripts/: __init__.py  migrate_add_indices.py
backend/tests/: conftest.py  docker-compose.test.yml  test_agtype.py  test_alembic_env.py  test_analyze_pr_pagination.py  test_auth.py  test_config.py  test_database.py  test_errors.py  test_logging.py  test_metadata.py  test_middleware.py  test_query_execute.py  test_query_stream.py  test_query_tracker.py  test_security_headers.py  test_session.py  test_validation.py
backend/tests/integration/: README.md  conftest.py  test_auth_flow.py  test_connections.py  test_database_connection.py  test_graph.py  test_health.py  test_query.py  test_session_flow.py  test_transaction_rollback_real_db.py
backend/tests/performance/: README.md  __init__.py  test_benchmarks.py
backend/tests/security/: test_injection.py
(+142 files in other folders)
